--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </div>
 
 
-   <section class=columns>
+   <section class="columns">
     <h3>These are more projects I completed using Scratch...
         This particular one is called "Maze Game Remix"</h3>
       <div class= "images">
@@ -48,26 +48,26 @@
             See my project here. click <a
            href= "https://scratch.mit.edu/projects/235707008/" target= "_blank">here<a/>
 
-   <section class=columns>
+   <section class="columns">
         This particular one is called "Would You Rather?"</h3>
       <div class= "images">
-        <img src=".images/scratch2.jpg"  alt="scratch1" width="200px" height="200px"/ >
+        <img src="./images/scratch2.jpg"  alt="scratch1" width="200px" height="200px"/ >
       </div>
             See my project here. click <a
            href= "https://scratch.mit.edu/projects/235686282/" target= "_blank">here<a/>
 
-   <section class=columns>
+   <section class="columns">
     This particular one is called "This is me!"</h3>
       <div class= "images">
-        <img src=".images/scratch3.jpg"  alt="scratch1" width="200px" height="200px"/ >
+        <img src="./images/scratch3.jpg"  alt="scratch1" width="200px" height="200px"/ >
       </div>
              See my project here. click <a
             href= "https://scratch.mit.edu/projects/235358851/" target= "_blank">here<a/>
 
-    <section class=columns>
+    <section class="columns">
       This particular one is called "Would You Rather?"</h3>
       <div class= "images">
-         <img src=".images/scratch4.jpg"  alt="scratch1" width="200px" height="200px"/ >
+         <img src="./images/scratch4.jpg"  alt="scratch1" width="200px" height="200px"/ >
      </div>
           See my project here. click <a
            href= "https://scratch.mit.edu/projects/235375856/" target= "_blank">here<a/>
@@ -76,14 +76,14 @@
 
 
     <h4> Here are codes for projects I completed using Python...</h4>
-    <div class= python>
-     <img src=".images/python1.jpg" alt= "python1" width="400px" height="400px"/>
-     <img src=".images/python2.jpg" alt= "python2" width="400px" height="400px"/>
-     <img src=".images/python3.jpg" alt= "python3" width="400px" height="400px"/>
-     <img src=".images/python4.jpg" alt= "python4" width="400px" height="400px"/>
-     <img src=".images/python5.jpg" alt= "python5" width="400px" height="400px"/>
-     <img src=".images/python6.jpg" alt= "python6" width="400px" height="400px"/>
-     <img src=".images/python7.jpg" alt= "python7" width="400px" height="400px"/>
+    <div class= "python">
+     <img src="./images/python1.jpg" alt= "python1" width="400px" height="400px"/>
+     <img src="./images/python2.jpg" alt= "python2" width="400px" height="400px"/>
+     <img src="./images/python3.jpg" alt= "python3" width="400px" height="400px"/>
+     <img src="./images/python4.jpg" alt= "python4" width="400px" height="400px"/>
+     <img src="./images/python5.jpg" alt= "python5" width="400px" height="400px"/>
+     <img src="./images/python6.jpg" alt= "python6" width="400px" height="400px"/>
+     <img src="./images/python7.jpg" alt= "python7" width="400px" height="400px"/>
    </div>
 
 
