--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
    <section class="columns">
         This particular one is called "Would You Rather?"</h3>
       <div class= "images">
-        <img src="./images/scratch2.jpg"  alt="scratch1" width="200px" height="200px"/ >
+        <img src="./images/Scratch2.jpg"  alt="scratch1" width="200px" height="200px"/ >
       </div>
             See my project here. click <a
            href= "https://scratch.mit.edu/projects/235686282/" target= "_blank">here<a/>
